compile_tests/expected/references.stderr
error: `mut` keyword must not be used for references
 --> compile_tests/src/references.rs:7:21
  |
7 |     fn func(param: &mut I32) -> &mut I32 {
  |                     ^^^

error: `mut` keyword must not be used for references
 --> compile_tests/src/references.rs:7:34
  |
7 |     fn func(param: &mut I32) -> &mut I32 {
  |                                  ^^^

error: `mut` keyword must not be used for references
 --> compile_tests/src/references.rs:8:10
  |
8 |         &mut 0
  |          ^^^

error[E0277]: the trait bound `&I32: Gpu` is not satisfied
  --> compile_tests/src/references.rs:12:9
   |
12 |         if true {
   |         ^^ the trait `Gpu` is not implemented for `&I32`
   |
help: consider borrowing here
   |
12 |         &if true {
   |         +




error[E0515]: cannot return reference to temporary value
 --> compile_tests/src/references.rs:8:9
  |
8 |         &mut 0
  |         ^^^^^-
  |         |    |
  |         |    temporary value created here
  |         returns a reference to data owned by the current function